# pulumi-confluentcloud

./: .ci-mgmt.yaml  .gitignore  .gitmodules  .golangci.yml  .goreleaser.prerelease.yml  .goreleaser.yml  .upgrade-config.yml  Makefile  README.md  mise.toml  renovate.json5
.claude/: CLAUDE.md
.config/: mise.toml
.github/: copilot-instructions.md
docs/: _index.md
examples/: examples_dotnet_test.go  examples_nodejs_test.go  examples_py_test.go  examples_test.go  go.mod  go.sum
patches/: 0001-Add-support-for-deprecated-and-removed-http_endpoint.patch  (+4 more)
sdk/python/: Pulumi.yaml  README.md  pyproject.toml  setup.py
sdk/python/pulumi_confluentcloud/: README.md  __init__.py  _inputs.py  access_point.py  api_key.py  business_metadata.py  business_metadata_binding.py  byok_key.py  catalog_entity_attributes.py  catalog_integration.py  certificate_authority.py  certificate_pool.py  cluster_link.py  connect_artifact.py  connector.py  custom_connector_plugin.py  custom_connector_plugin_version.py  dns_forwarder.py  dns_record.py  environment.py  flink_artifact.py  flink_compute_pool.py  flink_compute_pool_config.py  flink_connection.py  flink_materialized_table.py  flink_statement.py  gateway.py  get_access_point.py  get_business_metadata.py  get_business_metadata_binding.py  get_byok_key.py  get_catalog_integration.py  get_certificate_authority.py  get_certificate_pool.py  get_cluster_link.py  get_connect_artifact.py  get_dns_record.py  get_endpoint.py  get_environment.py  get_environments.py  (+97 more)
sdk/python/pulumi_confluentcloud/config/: __init__.pyi  outputs.py  vars.py
(+2657 files in other folders)
