[project]
  name = "pulumi_confluentcloud"
  description = "A Pulumi package for creating and managing Confluent cloud resources."
  dependencies = ["importlib-metadata>=6.0.0,<7.0.0; python_version < \"3.8\"", "parver>=0.2.1", "pulumi>=3.0.0,<4.0.0", "semver>=2.8.1"]
  keywords = ["pulumi", "confluentcloud", "category/cloud"]
  readme = "README.md"
  requires-python = ">=3.7"
  version = "0.0.0"
  [project.license]
    text = "Apache-2.0"
  [project.urls]
    Homepage = "https://www.pulumi.com"
    Repository = "https://github.com/pulumi/pulumi-confluentcloud"

[build-system]
  requires = ["setuptools>=61.0"]
  build-backend = "setuptools.build_meta"

[tool]
  [tool.setuptools]
    [tool.setuptools.package-data]
      pulumi_confluentcloud = ["py.typed", "pulumi-plugin.json"]
